Fix some minor bug